backend and edits

--- a/Crop_Yield_Prediction/index.html
+++ b/Crop_Yield_Prediction/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Predict crop yields with precision using advanced agricultural analytics. Input climate data, pesticide usage, and location for accurate harvest predictions." />
     <meta name="author" content="AgriTech Analytics" />
 
-    <meta property="og:title" content="Crop Yield Predictor - Agricultural Analytics Platform" />
-    <meta property="og:description" content="Harness the power of data to predict agricultural yields with precision across multiple crops and countries." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="Crop Yield Predictor - Agricultural Analytics Platform" />
+  <meta property="og:description" content="Harness the power of data to predict agricultural yields with precision across multiple crops and countries." />
+  <meta property="og:type" content="website" />
+  <link rel="icon" href="/crop-favicon.svg" type="image/svg+xml" />
+  <meta property="og:image" content="/placeholder.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@AgriTechAnalytics" />
+  <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
